[package]
name = "cags"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.aduc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
lazy_static = "1.4.0"
serde = { version="1.0.126", features = ["derive"] }
sodiumoxide = "0.2.6"
serde_json = "1.0"
strum = "0.21.0"
strum_macros = "0.21.1"
casbin = { version = "2.0.7", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.4.0", features = ["full"] }