[package]
name = "cags"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.aduc@gmail.com>",
    "Doran Kayoumi <doran.kayoumi@heig-vd.ch>",
    "Bastien Potet <bastien.potet@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
lazy_static = "1.4.0"
serde = { version="1.0.126", features = ["derive"] }
sodiumoxide = "0.2.6"
serde_json = "1.0"
strum = "0.21.0"
strum_macros = "0.21.1"
casbin = { version = "2.0.7", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.4.0", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8"
regex = "1"
simple_logger = "1.11.0"
log = "0.4.14"
futures = "0.3"